car/car-serv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: car-serv-deployment
  name: car-serv-deployment
  namespace: car-serv
spec:
  # Số pod
  replicas: 4
  strategy:
    # Triển khai dần dần xóa từng pod không làm downtime (thay thế từng pod cũ sang pod mới)
    type: RollingUpdate
    rollingUpdate:
      # Thêm tối đa 2 pod mới (4 + 2 = 6)
      maxSurge: 2
      # Số pod cũ tắt cùng 1 lúc là 2 (4 - 2 = 2)
      maxUnavailable: 2
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: car-serv-deployment
  template:
    metadata:
      labels:
        app: car-serv-deployment
      namespace: car-serv
    spec:
      containers:
        - image: elroydevops/car-serv
          imagePullPolicy: Always
          name: car-serv
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
